[package]
name = "moby-stuff"
version = "0.1.0"
authors = ["Karen <karenl.harper88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.6.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
rand = "0.7.3"
